--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -32,7 +32,7 @@ NEXT_PUBLIC_OG_IMAGE_URL=https://wonnetwork.org/images/won.png
 NEXT_PUBLIC_GAS_TRACKER_ENABLED=true
 NEXT_PUBLIC_GAS_TRACKER_UNITS=[ 'gwei' ]
 NEXT_PUBLIC_GOOGLE_ANALYTICS_PROPERTY_ID=G-EP4KWZDQL0
-NEXT_PUBLIC_SWAP_BUTTON_URL=https://pancakeswap.finance/swap?inputCurrency=0x55d398326f99059fF775485246999027B3197955&outputCurrency=0xC05e4d0E570E5C0Be901Bbf36D6a27819a24F6c9
+#NEXT_PUBLIC_SWAP_BUTTON_URL= #Removed
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=58937b02b1fc1d5f6fe875c67666eb57
 NEXT_PUBLIC_SEO_ENHANCED_DATA_ENABLED=true
 NEXT_PUBLIC_VIEWS_TX_ADDITIONAL_FIELDS=["fee_per_gas"]
