chore: clean config and increase batch-size

--- a/docker-compose/prod/envs/common-blockscout.env
+++ b/docker-compose/prod/envs/common-blockscout.env
@@ -153,11 +153,11 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_DISABLE_BLOCK_REWARD_FETCHER=
 # INDEXER_DISABLE_EMPTY_BLOCKS_SANITIZER=
 # INDEXER_DISABLE_WITHDRAWALS_FETCHER=
-# INDEXER_CATCHUP_BLOCKS_BATCH_SIZE=
+INDEXER_CATCHUP_BLOCKS_BATCH_SIZE=100
 # INDEXER_CATCHUP_BLOCKS_CONCURRENCY=
 # INDEXER_CATCHUP_BLOCK_INTERVAL=
 # INDEXER_EMPTY_BLOCKS_SANITIZER_INTERVAL=
-# INDEXER_INTERNAL_TRANSACTIONS_BATCH_SIZE=
+INDEXER_INTERNAL_TRANSACTIONS_BATCH_SIZE=100
 # INDEXER_INTERNAL_TRANSACTIONS_CONCURRENCY=
 # ETHEREUM_JSONRPC_DEBUG_TRACE_TRANSACTION_TIMEOUT=
 # INDEXER_BLOCK_REWARD_BATCH_SIZE=
