--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -488,3 +488,8 @@ TENDERLY_CHAIN_PATH=
 # SHRINK_INTERNAL_TRANSACTIONS_ENABLED=
 # SHRINK_INTERNAL_TRANSACTIONS_BATCH_SIZE=
 # SHRINK_INTERNAL_TRANSACTIONS_CONCURRENCY=
+# NFT_MEDIA_HANDLER_ENABLED=true
+# NFT_MEDIA_HANDLER_REMOTE_DISPATCHER_NODE_MODE_ENABLED=true
+# RELEASE_NODE=producer@172.18.0.4
+# RELEASE_DISTRIBUTION=name
+# COOKIE=secret
