feat: Add icon for secondary coin

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -41,6 +41,8 @@ EMISSION_FORMAT=DEFAULT
 # SUPPLY_MODULE=
 COIN=
 EXCHANGE_RATES_COIN=
+# EXCHANGE_RATES_SOURCE=
+# EXCHANGE_RATES_SECONDARY_COIN_SOURCE=
 # EXCHANGE_RATES_MARKET_CAP_SOURCE=
 # EXCHANGE_RATES_TVL_SOURCE=
 # EXCHANGE_RATES_PRICE_SOURCE=
