chore: update cache env vars

--- a/docker-compose/prod/envs/common-blockscout.env
+++ b/docker-compose/prod/envs/common-blockscout.env
@@ -1,11 +1,11 @@
-ETHEREUM_JSONRPC_VARIANT=geth
-ETHEREUM_JSONRPC_HTTP_URL=http://34.141.88.80:8545
+ETHEREUM_JSONRPC_VARIANT=erigon
+ETHEREUM_JSONRPC_HTTP_URL=https://testnet-rpc.wvm.dev
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 # DATABASE_QUEUE_TARGET
 # TEST_DATABASE_URL=
 # TEST_DATABASE_READ_ONLY_API_URL=
-ETHEREUM_JSONRPC_TRACE_URL=http://34.141.88.80:8545
+ETHEREUM_JSONRPC_TRACE_URL=https://testnet-rpc.wvm.dev
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
 # ETHEREUM_JSONRPC_FALLBACK_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_ETH_CALL_URL=
@@ -85,25 +85,25 @@ FOOTER_LOGO=/images/blockscout_logo.svg
 FOOTER_LINK_TO_OTHER_EXPLORERS=false
 FOOTER_OTHER_EXPLORERS={}
 SUPPORTED_CHAINS={}
-CACHE_BLOCK_COUNT_PERIOD=7200
-CACHE_TXS_COUNT_PERIOD=7200
-CACHE_ADDRESS_SUM_PERIOD=3600
-CACHE_TOTAL_GAS_USAGE_PERIOD=3600
-CACHE_ADDRESS_TRANSACTIONS_GAS_USAGE_COUNTER_PERIOD=1800
-CACHE_TOKEN_HOLDERS_COUNTER_PERIOD=3600
-CACHE_TOKEN_TRANSFERS_COUNTER_PERIOD=3600
-CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL=1800
-CACHE_AVERAGE_BLOCK_PERIOD=1800
-CACHE_MARKET_HISTORY_PERIOD=21600
-CACHE_ADDRESS_TRANSACTIONS_COUNTER_PERIOD=1800
-CACHE_ADDRESS_TOKENS_USD_SUM_PERIOD=3600
-CACHE_ADDRESS_TOKEN_TRANSFERS_COUNTER_PERIOD=1800
+CACHE_BLOCK_COUNT_PERIOD=60
+CACHE_TXS_COUNT_PERIOD=60
+CACHE_ADDRESS_SUM_PERIOD=60
+CACHE_TOTAL_GAS_USAGE_PERIOD=60
+CACHE_ADDRESS_TRANSACTIONS_GAS_USAGE_COUNTER_PERIOD=30
+CACHE_TOKEN_HOLDERS_COUNTER_PERIOD=60
+CACHE_TOKEN_TRANSFERS_COUNTER_PERIOD=60
+CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL=30
+CACHE_AVERAGE_BLOCK_PERIOD=30
+CACHE_MARKET_HISTORY_PERIOD=60
+CACHE_ADDRESS_TRANSACTIONS_COUNTER_PERIOD=60
+CACHE_ADDRESS_TOKENS_USD_SUM_PERIOD=60
+CACHE_ADDRESS_TOKEN_TRANSFERS_COUNTER_PERIOD=60
 # CACHE_TRANSACTIONS_24H_STATS_PERIOD=
 # CACHE_FRESH_PENDING_TRANSACTIONS_COUNTER_PERIOD=
 # TOKEN_BALANCE_ON_DEMAND_FETCHER_THRESHOLD=
 # COIN_BALANCE_ON_DEMAND_FETCHER_THRESHOLD=
 # CONTRACT_CODE_ON_DEMAND_FETCHER_THRESHOLD=
-TOKEN_METADATA_UPDATE_INTERVAL=172800
+TOKEN_METADATA_UPDATE_INTERVAL=60
 CONTRACT_VERIFICATION_ALLOWED_SOLIDITY_EVM_VERSIONS=homestead,tangerineWhistle,spuriousDragon,byzantium,constantinople,petersburg,istanbul,berlin,london,paris,shanghai,cancun,default
 CONTRACT_VERIFICATION_ALLOWED_VYPER_EVM_VERSIONS=byzantium,constantinople,petersburg,istanbul,berlin,paris,shanghai,cancun,default
 # CONTRACT_VERIFICATION_MAX_LIBRARIES=10
@@ -157,7 +157,7 @@ INDEXER_CATCHUP_BLOCKS_BATCH_SIZE=100
 # INDEXER_CATCHUP_BLOCKS_CONCURRENCY=
 # INDEXER_CATCHUP_BLOCK_INTERVAL=
 # INDEXER_EMPTY_BLOCKS_SANITIZER_INTERVAL=
-INDEXER_INTERNAL_TRANSACTIONS_BATCH_SIZE=100
+# INDEXER_INTERNAL_TRANSACTIONS_BATCH_SIZE=10
 # INDEXER_INTERNAL_TRANSACTIONS_CONCURRENCY=
 # ETHEREUM_JSONRPC_DEBUG_TRACE_TRANSACTION_TIMEOUT=
 # INDEXER_BLOCK_REWARD_BATCH_SIZE=
