chore: fix credo and formatting issues

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -29,6 +29,8 @@ on:
     types: [opened, synchronize, reopened, labeled]
     branches:
       - master
+      # todo: remove before merge
+      - fi-celo
 
 env:
   MIX_ENV: test
