--- a/.github/workflows/publish-regular-docker-image-on-demand.yml
+++ b/.github/workflows/publish-regular-docker-image-on-demand.yml
@@ -2,12 +2,9 @@ name: Publish regular Docker image on demand
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - np-hf-revert-reason-1
 env:
-  OTP_VERSION: 25.3.2.8
-  ELIXIR_VERSION: 1.14.5
+  OTP_VERSION: ${{ vars.OTP_VERSION }}
+  ELIXIR_VERSION: ${{ vars.ELIXIR_VERSION }}
   RELEASE_VERSION: ${{ vars.RELEASE_VERSION }}
 
 jobs:
