--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -41,9 +41,9 @@ services:
     links:
       - db:database
     environment:
-        ETHEREUM_JSONRPC_HTTP_URL: http://host.docker.internal:8545/
-        ETHEREUM_JSONRPC_TRACE_URL: http://host.docker.internal:8545/
-        ETHEREUM_JSONRPC_WS_URL: ws://host.docker.internal:8545/
+        ETHEREUM_JSONRPC_HTTP_URL: http://34.245.225.29:8545/
+        ETHEREUM_JSONRPC_TRACE_URL: http://34.245.225.29:8545/
+        ETHEREUM_JSONRPC_WS_URL: ws://34.245.225.29:8545
         CHAIN_ID: '2370'
         
   visualizer:
