Revert "test new armbuilder"
This reverts commit 5460783c51d8c1f73cb666904a55cfb8fac78572.

--- a/.github/actions/setup-repo/action.yml
+++ b/.github/actions/setup-repo/action.yml
@@ -68,7 +68,7 @@ runs:
       with:
         platforms: linux/amd64
         append: |
-          - endpoint: ssh://root@${{ env.BUILDER_IP }}
+          - endpoint: ssh://ubuntu@${{ env.BUILDER_IP }}
             platforms: linux/arm64/v8
 
     - name: Log in to Docker Hub
