--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,11 +1,11 @@
 NEXT_PUBLIC_API_HOST=localhost
 NEXT_PUBLIC_API_PROTOCOL=http
 NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
-NEXT_PUBLIC_NETWORK_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_SHORT_NAME=Awesome chain
+NEXT_PUBLIC_NETWORK_NAME=Bharat Blockchain Network
+NEXT_PUBLIC_NETWORK_SHORT_NAME=BBN
 NEXT_PUBLIC_NETWORK_ID=5
-NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Ether
-NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=ETH
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=BBN
+NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=BBN
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
 NEXT_PUBLIC_API_BASE_PATH=/
 NEXT_PUBLIC_APP_HOST=localhost
@@ -15,3 +15,9 @@ NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
 NEXT_PUBLIC_IS_TESTNET=true
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=ws
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+NEXT_PUBLIC_AD_TEXT_PROVIDER=none
+NEXT_PUBLIC_AD_BANNER_PROVIDER=none
+NEXT_PUBLIC_NETWORK_LOGO=https://bharatblockchain.io/wp-content/uploads/2022/04/cropped-bbn-logo.png
+NEXT_PUBLIC_NETWORK_ICON=https://bharatblockchain.io/wp-content/uploads/2022/04/IDS-logo.png
+NEXT_PUBLIC_PROMOTE_BLOCKSCOUT_IN_TITLE=false
+
