--- a/docker-compose/services/stats.yml
+++ b/docker-compose/services/stats.yml
@@ -50,3 +50,5 @@ services:
       - STATS__BLOCKSCOUT_DB_URL=${STATS__BLOCKSCOUT_DB_URL:-postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout}
       - STATS__CREATE_DATABASE=true
       - STATS__RUN_MIGRATIONS=true
+    volumes:
+      - ${BLOCKSCOUT_ASSETS_DIR:-../assets}:/app/config
