--- a/docker-compose/services/db.yml
+++ b/docker-compose/services/db.yml
@@ -33,3 +33,8 @@ services:
       timeout: 5s
       retries: 5
       start_period: 10s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "1"
