--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -398,4 +398,5 @@ TENDERLY_CHAIN_PATH=
 # WHITELISTED_WETH_CONTRACTS=
 # SANITIZE_INCORRECT_WETH_BATCH_SIZE=100
 # SANITIZE_INCORRECT_WETH_CONCURRENCY=1
-# METRICS_DISABLE_PUBLIC=
+# PUBLIC_METRICS_ENABLED=
+# PUBLIC_METRICS_UPDATE_PERIOD_HOURS=
