Enable tracing in blockscout

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -53,13 +53,13 @@ services:
         INDEXER_DISABLE_EMPTY_BLOCKS_SANITIZER: "true"
         ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES: "true"
         ETHEREUM_JSONRPC_GETH_TRACE_BY_BLOCK: "true"
-        INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER: "true"
         INDEXER_CATCHUP_BLOCK_INTERVAL: "10s"
         INDEXER_HIDE_INDEXING_PROGRESS_ALERT: "true"
         CHAIN_SPEC_PATH: "/opt/app/config.json"
         SECRET_KEY_BASE: "RMgI4C1HSkxsEjdhtGMfwAHfyT6CKWXOgzCboJflfSm4jeAlic52io05KB6mqzc5"
         MICROSERVICE_SIG_PROVIDER_ENABLED: "false"
         INDEXER_TOKEN_INSTANCE_RETRY_REFETCH_INTERVAL: "30s"
+        ETHEREUM_JSONRPC_DEBUG_TRACE_TRANSACTION_TIMEOUT: "30s"
 
   frontend:
     depends_on:
