Extend common-blockscout.env

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -378,6 +378,7 @@ SOURCIFY_SERVER_URL=
 SOURCIFY_REPO_URL=
 SHOW_TENDERLY_LINK=false
 TENDERLY_CHAIN_PATH=
+# SOLIDITYSCAN_PLATFORM_ID=
 # SOLIDITYSCAN_CHAIN_ID=
 # SOLIDITYSCAN_API_TOKEN=
 # NOVES_FI_BASE_API_URL=
