--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -279,13 +279,13 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_OPTIMISM_L2_MESSAGE_PASSER_CONTRACT=
 # INDEXER_OPTIMISM_L1_DEPOSITS_BATCH_SIZE=
 # INDEXER_SCROLL_L2_GAS_ORACLE_CONTRACT=
-# INDEXER_SCROLL_L2_CURIE_UPGRADE_BLOCK=
-# INDEXER_SCROLL_L1_SCALAR_INIT=
-# INDEXER_SCROLL_L1_OVERHEAD_INIT=
-# INDEXER_SCROLL_L1_COMMIT_SCALAR_INIT=
-# INDEXER_SCROLL_L1_BLOB_SCALAR_INIT=
-# INDEXER_SCROLL_L1_BASE_FEE_INIT=
-# INDEXER_SCROLL_L1_BLOB_BASE_FEE_INIT=
+# SCROLL_L2_CURIE_UPGRADE_BLOCK=
+# SCROLL_L1_SCALAR_INIT=
+# SCROLL_L1_OVERHEAD_INIT=
+# SCROLL_L1_COMMIT_SCALAR_INIT=
+# SCROLL_L1_BLOB_SCALAR_INIT=
+# SCROLL_L1_BASE_FEE_INIT=
+# SCROLL_L1_BLOB_BASE_FEE_INIT=
 # ROOTSTOCK_REMASC_ADDRESS=
 # ROOTSTOCK_BRIDGE_ADDRESS=
 # ROOTSTOCK_LOCKED_BTC_CACHE_PERIOD=
