--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -156,6 +156,7 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_DISABLE_BLOCK_REWARD_FETCHER=
 # INDEXER_DISABLE_EMPTY_BLOCKS_SANITIZER=
 # INDEXER_DISABLE_WITHDRAWALS_FETCHER=
+# INDEXER_DISABLE_REPLACED_TRANSACTION_FETCHER=
 # INDEXER_CATCHUP_BLOCKS_BATCH_SIZE=
 # INDEXER_CATCHUP_BLOCKS_CONCURRENCY=
 # INDEXER_CATCHUP_BLOCK_INTERVAL=
