Update frontend image to skalenetwork/blockscout-frontend:latest

--- a/docker-compose/services/frontend.yml
+++ b/docker-compose/services/frontend.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   frontend:
-    image: ghcr.io/blockscout/frontend:${FRONTEND_DOCKER_TAG:-v1.28.1}
+    image: skalenetwork/blockscout-frontend:${FRONTEND_DOCKER_TAG:-latest}
     pull_policy: always
     platform: linux/amd64
     restart: always
