chore: add new vars to `common-blockscout.env` file

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -247,6 +247,9 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_ARBITRUM_MISSED_MESSAGES_RECHECK_INTERVAL=
 # INDEXER_ARBITRUM_MISSED_MESSAGES_TO_L2_BLOCK_DEPTH=
 # INDEXER_ARBITRUM_MISSED_MESSAGES_TO_L1_BLOCK_DEPTH=
+# CELO_CORE_CONTRACTS=
+# INDEXER_CELO_VALIDATOR_GROUP_VOTES_BATCH_SIZE=200000
+# INDEXER_DISABLE_CELO_EPOCH_FETCHER=false
 # INDEXER_REALTIME_FETCHER_MAX_GAP=
 # INDEXER_FETCHER_INIT_QUERY_LIMIT=
 # INDEXER_TOKEN_BALANCES_FETCHER_INIT_QUERY_LIMIT=
