feat: No rate limit API key

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -131,6 +131,7 @@ API_RATE_LIMIT_WHITELISTED_IPS=
 API_RATE_LIMIT_STATIC_API_KEY=
 API_RATE_LIMIT_UI_V2_WITH_TOKEN=5
 API_RATE_LIMIT_BY_IP=3000
+API_NO_RATE_LIMIT_API_KEY=
 # API_GRAPHQL_ENABLED=
 # API_GRAPHQL_MAX_COMPLEXITY=
 # API_GRAPHQL_TOKEN_LIMIT=
