fix: explorer title

--- a/docker-compose/prod/envs/common-frontend.env
+++ b/docker-compose/prod/envs/common-frontend.env
@@ -1,8 +1,8 @@
 NEXT_PUBLIC_API_HOST=explorer.wvm.dev
 NEXT_PUBLIC_API_PROTOCOL=https
 NEXT_PUBLIC_STATS_API_HOST=https://stats.wvm.dev
-NEXT_PUBLIC_NETWORK_NAME=Weave VM
-NEXT_PUBLIC_NETWORK_SHORT_NAME=Weave VM
+NEXT_PUBLIC_NETWORK_NAME=WeaveVM
+NEXT_PUBLIC_NETWORK_SHORT_NAME=WeaveVM
 NEXT_PUBLIC_NETWORK_ID=9496
 NEXT_PUBLIC_NETWORK_CURRENCY_NAME=tWVM
 NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=TWVM
