adjusted approach to revisit missing confirmations

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -235,6 +235,7 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_ARBITRUM_L1_ROLLUP_CONTRACT=
 # INDEXER_ARBITRUM_L1_ROLLUP_INIT_BLOCK=
 # INDEXER_ARBITRUM_L1_COMMON_START_BLOCK=
+# INDEXER_ARBITRUM_L1_FINALIZATION_THRESHOLD=
 # INDEXER_ARBITRUM_ROLLUP_CHUNK_SIZE=
 # INDEXER_ARBITRUM_BATCHES_TRACKING_ENABLED=
 # INDEXER_ARBITRUM_BATCHES_TRACKING_RECHECK_INTERVAL=
