--- a/.github/workflows/publish-docker-image-for-filecoin.yml
+++ b/.github/workflows/publish-docker-image-for-filecoin.yml
@@ -3,7 +3,8 @@ name: Publish Docker image for specific chain branches
 on:
   push:
     branches:
-      - production-filecoin
+      - prod
+      uction-filecoin
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
