chore: Shrink internal transactions

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -415,3 +415,6 @@ TENDERLY_CHAIN_PATH=
 # PUBLIC_METRICS_ENABLED=
 # PUBLIC_METRICS_UPDATE_PERIOD_HOURS=
 # CSV_EXPORT_LIMIT=
+# SHRINK_INTERNAL_TRANSACTIONS_ENABLED=
+# SHRINK_INTERNAL_TRANSACTIONS_BATCH_SIZE=
+# SHRINK_INTERNAL_TRANSACTIONS_CONCURRENCY=
