--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -264,6 +264,9 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_CELO_VALIDATOR_GROUP_VOTES_BATCH_SIZE=200000
 # INDEXER_DISABLE_CELO_EPOCH_FETCHER=false
 # INDEXER_DISABLE_CELO_VALIDATOR_GROUP_VOTES_FETCHER=false
+# BERYX_API_TOKEN=
+# INDEXER_DISABLE_FILECOIN_NATIVE_ADDRESS_FETCHER=false
+# INDEXER_FILECOIN_NATIVE_ADDRESS_CONCURRENCY=1
 # INDEXER_ARBITRUM_MISSED_MESSAGES_BLOCKS_DEPTH=
 # INDEXER_REALTIME_FETCHER_MAX_GAP=
 # INDEXER_FETCHER_INIT_QUERY_LIMIT=
