--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -54,6 +54,13 @@ EXCHANGE_RATES_COIN=
 # EXCHANGE_RATES_COINMARKETCAP_COIN_ID=
 # EXCHANGE_RATES_COINMARKETCAP_SECONDARY_COIN_ID=
 # EXCHANGE_RATES_CRYPTOCOMPARE_SECONDARY_COIN_SYMBOL=
+# EXCHANGE_RATES_CRYPTORANK_SECONDARY_COIN_ID=
+# EXCHANGE_RATES_CRYPTORANK_PLATFORM_ID=
+# EXCHANGE_RATES_CRYPTORANK_BASE_URL=
+# EXCHANGE_RATES_CRYPTORANK_API_KEY=
+# EXCHANGE_RATES_CRYPTORANK_COIN_ID=
+# EXCHANGE_RATES_CRYPTORANK_LIMIT=
+# TOKEN_EXCHANGE_RATES_SOURCE=
 POOL_SIZE=80
 # EXCHANGE_RATES_COINGECKO_PLATFORM_ID=
 # TOKEN_EXCHANGE_RATE_INTERVAL=
