--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,5 +1,5 @@
 ETHEREUM_JSONRPC_VARIANT=geth
-ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8545/
+ETHEREUM_JSONRPC_HTTP_URL=https://l2-rpc.api.biolimitlessdirect.com
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 # DATABASE_EVENT_URL=
@@ -13,8 +13,8 @@ ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
 # ETHEREUM_JSONRPC_HTTP_TIMEOUT=
 # CHAIN_TYPE=
 NETWORK=
-SUBNETWORK=Awesome chain
-LOGO=/images/blockscout_logo.svg
+SUBNETWORK=Limitless Chain
+LOGO=/images/Biolimitless_Icon.png
 # ETHEREUM_JSONRPC_WS_URL=
 # ETHEREUM_JSONRPC_FALLBACK_WS_URL=
 # ETHEREUM_JSONRPC_WS_RETRY_INTERVAL=
