chore: rename fetcher

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -265,8 +265,9 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_DISABLE_CELO_EPOCH_FETCHER=false
 # INDEXER_DISABLE_CELO_VALIDATOR_GROUP_VOTES_FETCHER=false
 # BERYX_API_TOKEN=
-# INDEXER_DISABLE_FILECOIN_NATIVE_ADDRESS_FETCHER=false
-# INDEXER_FILECOIN_NATIVE_ADDRESS_CONCURRENCY=1
+# BERYX_API_BASE_URL=
+# INDEXER_DISABLE_FILECOIN_ADDRESS_INFO_FETCHER=false
+# INDEXER_FILECOIN_ADDRESS_INFO_CONCURRENCY=1
 # INDEXER_ARBITRUM_MISSED_MESSAGES_BLOCKS_DEPTH=
 # INDEXER_REALTIME_FETCHER_MAX_GAP=
 # INDEXER_FETCHER_INIT_QUERY_LIMIT=
