Add secure new envs and reCAPTCHA api keys

--- a/docker-compose/services/db.yml
+++ b/docker-compose/services/db.yml
@@ -21,7 +21,7 @@ services:
     environment:
         POSTGRES_DB: 'blockscout'
         POSTGRES_USER: 'blockscout'
-        POSTGRES_PASSWORD: 'ceWb1MeLBEeOIfk65gU8EjF8'
+        POSTGRES_PASSWORD: ${DB_PASSWORD:-ceWb1MeLBEeOIfk65gU8EjF8}
     ports:
       - target: 5432
         published: ${DB_PORT:-7432}
