--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -60,6 +60,9 @@ services:
         MICROSERVICE_SIG_PROVIDER_ENABLED: "false"
         INDEXER_TOKEN_INSTANCE_RETRY_REFETCH_INTERVAL: "30s"
         ETHEREUM_JSONRPC_DEBUG_TRACE_TRANSACTION_TIMEOUT: "30s"
+        RE_CAPTCHA_CLIENT_KEY: "6LcUCysqAAAAAB62o5u8RnB_FzMELuEnxPPst_ET"
+        RE_CAPTCHA_SECRET_KEY: ${RE_CAPTCHA_SECRET_KEY}
+        DATABASE_URL: "postgresql://blockscout:${DB_PASSWORD:-ceWb1MeLBEeOIfk65gU8EjF8}@db:5432/blockscout"
 
   frontend:
     depends_on:
@@ -88,14 +91,6 @@ services:
     extends:
       file: ./services/stats.yml
       service: stats
-
-  user-ops-indexer:
-    depends_on:
-      - db
-      - backend
-    extends:
-      file: ./services/user-ops-indexer.yml
-      service: user-ops-indexer
 
   proxy:
     depends_on:
