--- a/docker-compose/services/frontend.yml
+++ b/docker-compose/services/frontend.yml
@@ -31,7 +31,7 @@ services:
       - NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/skalenetwork/blockscout/develop/docker-compose/assets/network_logo.png
       - NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/skalenetwork/blockscout/develop/docker-compose/assets/network_icon.png
       - NEXT_PUBLIC_FEATURED_NETWORKS=https://raw.githubusercontent.com/skalenetwork/blockscout/develop/docker-compose/assets/featured_networks.json
+      - NEXT_PUBLIC_RE_CAPTCHA_APP_SITE_KEY=6LcUCysqAAAAAB62o5u8RnB_FzMELuEnxPPst_ET
     env_file:
       -  ../envs/common-frontend.env
-    volumes:
-      - ${BLOCKSCOUT_ASSETS_DIR:-../assets}:/app/public/assets
+
