--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -204,6 +204,8 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_TOKEN_CONCURRENCY=
 # INDEXER_TOKEN_BALANCES_BATCH_SIZE=
 # INDEXER_TOKEN_BALANCES_CONCURRENCY=
+# INDEXER_TOKEN_BALANCES_MAX_REFETCH_INTERVAL=
+# INDEXER_TOKEN_BALANCES_EXPONENTIAL_TIMEOUT_COEFF=
 # INDEXER_TX_ACTIONS_ENABLE=
 # INDEXER_TX_ACTIONS_MAX_TOKEN_CACHE_SIZE=
 # INDEXER_TX_ACTIONS_REINDEX_FIRST_BLOCK=
