chore: Set indexer memory limit based on system info as a fallback

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -280,6 +280,7 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_COIN_BALANCES_FETCHER_INIT_QUERY_LIMIT=
 # INDEXER_GRACEFUL_SHUTDOWN_PERIOD=
 # INDEXER_INTERNAL_TRANSACTIONS_FETCH_ORDER=
+# INDEXER_SYSTEM_MEMORY_PERCENTAGE=
 # WITHDRAWALS_FIRST_BLOCK=
 # INDEXER_OPTIMISM_L1_RPC=
 # INDEXER_OPTIMISM_L1_SYSTEM_CONFIG_CONTRACT=
