--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -386,6 +386,7 @@ DECODE_NOT_A_CONTRACT_CALLS=true
 # ACCOUNT_SENDGRID_SENDER=
 # ACCOUNT_SENDGRID_TEMPLATE=
 # ACCOUNT_VERIFICATION_EMAIL_RESEND_INTERVAL=
+# ACCOUNT_OTP_RESEND_INTERVAL=
 # ACCOUNT_PRIVATE_TAGS_LIMIT=2000
 # ACCOUNT_WATCHLIST_ADDRESSES_LIMIT=15
 ACCOUNT_CLOAK_KEY=
