Add specs and docs

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -291,6 +291,10 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_OPTIMISM_L2_MESSAGE_PASSER_CONTRACT=
 # INDEXER_OPTIMISM_L1_DEPOSITS_BATCH_SIZE=
 # INDEXER_OPTIMISM_L1_DEPOSITS_TRANSACTION_TYPE=
+# INDEXER_SCROLL_L1_RPC=
+# INDEXER_SCROLL_L1_MESSENGER_CONTRACT=
+# INDEXER_SCROLL_L1_MESSENGER_START_BLOCK=
+# INDEXER_SCROLL_L2_MESSENGER_CONTRACT=
 # INDEXER_SCROLL_L2_GAS_ORACLE_CONTRACT=
 # SCROLL_L2_CURIE_UPGRADE_BLOCK=
 # SCROLL_L1_SCALAR_INIT=
