chore: process review comments by @vbaranov

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -266,6 +266,7 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_DISABLE_CELO_VALIDATOR_GROUP_VOTES_FETCHER=false
 # BERYX_API_TOKEN=
 # BERYX_API_BASE_URL=
+# FILECOIN_NETWORK_PREFIX=f
 # FILECOIN_PENDING_ADDRESS_OPERATIONS_MIGRATION_BATCH_SIZE=
 # FILECOIN_PENDING_ADDRESS_OPERATIONS_MIGRATION_CONCURRENCY=
 # INDEXER_DISABLE_FILECOIN_ADDRESS_INFO_FETCHER=false
