--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -278,6 +278,7 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_OPTIMISM_L2_WITHDRAWALS_START_BLOCK=
 # INDEXER_OPTIMISM_L2_MESSAGE_PASSER_CONTRACT=
 # INDEXER_OPTIMISM_L1_DEPOSITS_BATCH_SIZE=
+# INDEXER_OPTIMISM_L1_DEPOSITS_TRANSACTION_TYPE=
 # ROOTSTOCK_REMASC_ADDRESS=
 # ROOTSTOCK_BRIDGE_ADDRESS=
 # ROOTSTOCK_LOCKED_BTC_CACHE_PERIOD=
