--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,12 +1,12 @@
 ETHEREUM_JSONRPC_VARIANT=geth
-ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8545/
+ETHEREUM_JSONRPC_HTTP_URL=https://rpc.uomi.ai/
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 # DATABASE_EVENT_URL=
 # DATABASE_QUEUE_TARGET
 # TEST_DATABASE_URL=
 # TEST_DATABASE_READ_ONLY_API_URL=
-ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
+ETHEREUM_JSONRPC_TRACE_URL=https://rpc.uomi.ai/
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
 # ETHEREUM_JSONRPC_FALLBACK_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_ETH_CALL_URL=
@@ -328,7 +328,7 @@ EXTERNAL_APPS=[]
 # RESTRICTED_LIST_KEY=
 SHOW_MAINTENANCE_ALERT=false
 MAINTENANCE_ALERT_MESSAGE=
-CHAIN_ID=
+CHAIN_ID=4386
 MAX_SIZE_UNLESS_HIDE_ARRAY=50
 HIDE_BLOCK_MINER=false
 DISPLAY_TOKEN_ICONS=false
