--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,8 +1,8 @@
 NEXT_PUBLIC_API_HOST=localhost
 NEXT_PUBLIC_API_PROTOCOL=http
 NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
-NEXT_PUBLIC_NETWORK_NAME=UOMI Tokyo
-NEXT_PUBLIC_NETWORK_SHORT_NAME=UOMI Tokyo
+NEXT_PUBLIC_NETWORK_NAME=UOMI
+NEXT_PUBLIC_NETWORK_SHORT_NAME=UOMI
 NEXT_PUBLIC_NETWORK_ID=5
 NEXT_PUBLIC_NETWORK_CURRENCY_NAME=UOMI
 NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=UOMI
