Added UOMI logo

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -14,7 +14,7 @@ ETHEREUM_JSONRPC_TRACE_URL=https://rpc.uomi.ai/
 # CHAIN_TYPE=
 NETWORK=
 SUBNETWORK=Awesome chain
-LOGO=/images/blockscout_logo.svg
+LOGO=/images/uomi_logo.svg
 # ETHEREUM_JSONRPC_WS_URL=
 # ETHEREUM_JSONRPC_FALLBACK_WS_URL=
 # ETHEREUM_JSONRPC_WS_RETRY_INTERVAL=
