--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -94,7 +94,7 @@ BLOCK_TRANSFORMER=base
 # FOOTER_TELEGRAM_LINK_ENABLED=
 # FOOTER_TELEGRAM_LINK=
 # FOOTER_GITHUB_LINK=
-FOOTER_LOGO=/images/blockscout_logo.svg
+FOOTER_LOGO=/images/uomi_logo.svg
 FOOTER_LINK_TO_OTHER_EXPLORERS=false
 FOOTER_OTHER_EXPLORERS={}
 SUPPORTED_CHAINS={}
@@ -350,7 +350,7 @@ MICROSERVICE_SC_VERIFIER_TYPE=eth_bytecode_db
 MICROSERVICE_ETH_BYTECODE_DB_INTERVAL_BETWEEN_LOOKUPS=10m
 MICROSERVICE_ETH_BYTECODE_DB_MAX_LOOKUPS_CONCURRENCY=10
 MICROSERVICE_VISUALIZE_SOL2UML_ENABLED=true
-MICROSERVICE_VISUALIZE_SOL2UML_URL=http://visualizer:8050/
+MICROSERVICE_VISUALIZE_SOL2UML_URL=https://visualizer.explorer.uomi.ai/
 MICROSERVICE_SIG_PROVIDER_ENABLED=true
 MICROSERVICE_SIG_PROVIDER_URL=http://sig-provider:8050/
 # MICROSERVICE_BENS_URL=
