Added custom footer links

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -12,8 +12,8 @@ ETHEREUM_JSONRPC_TRACE_URL=https://rpc.uomi.ai/
 # ETHEREUM_JSONRPC_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_HTTP_TIMEOUT=
 # CHAIN_TYPE=
-NETWORK=
-SUBNETWORK=Awesome chain
+NETWORK=UOMI
+SUBNETWORK=
 LOGO=/images/uomi_logo.svg
 # ETHEREUM_JSONRPC_WS_URL=
 # ETHEREUM_JSONRPC_FALLBACK_WS_URL=
