--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -15,3 +15,4 @@ NEXT_PUBLIC_VISUALIZE_API_HOST=https://visualizer.explorer.uomi.ai
 NEXT_PUBLIC_IS_TESTNET=true
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+NEXT_PUBLIC_FOOTER_LINKS=https://raw.githubusercontent.com/Uomi-network/uomi-explorer/master/frontend-config/footer-links.json
