--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -17,3 +17,5 @@ NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
 NEXT_PUBLIC_FOOTER_LINKS=https://raw.githubusercontent.com/Uomi-network/uomi-explorer/master/frontend-config/footer-links.json
 NEXT_PUBLIC_WEB3_WALLETS=['metamask']
+NEXT_PUBLIC_NETWORK_RPC_URL=https://rpc.uomi.ai
+NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=322727203e59d903d5b47fc139685acd
