--- a/docker-compose/services/redis.yml
+++ b/docker-compose/services/redis.yml
@@ -6,4 +6,4 @@ services:
     container_name: redis-db
     command: redis-server
     volumes:
-      - ./redis-data:/data
+      - /mnt/volume-hel1-1/explorer-redis-data:/data
