--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -294,6 +294,8 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_SCROLL_L1_RPC=
 # INDEXER_SCROLL_L1_MESSENGER_CONTRACT=
 # INDEXER_SCROLL_L1_MESSENGER_START_BLOCK=
+# INDEXER_SCROLL_L1_CHAIN_CONTRACT=
+# INDEXER_SCROLL_L1_BATCH_START_BLOCK=
 # INDEXER_SCROLL_L2_MESSENGER_CONTRACT=
 # INDEXER_SCROLL_L2_GAS_ORACLE_CONTRACT=
 # INDEXER_SCROLL_ETH_GET_LOGS_RANGE_SIZE=
