--- a/.github/workflows/publish-docker-image-for-celo.yml
+++ b/.github/workflows/publish-docker-image-for-celo.yml
@@ -36,6 +36,7 @@ jobs:
             linux/amd64
             linux/arm64/v8
           build-args: |
+            API_GRAPHQL_MAX_COMPLEXITY=6650
             CACHE_EXCHANGE_RATES_PERIOD=
             API_V1_READ_METHODS_DISABLED=false
             DISABLE_WEBAPP=false
