Spelling&formatting issues

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -41,9 +41,9 @@ services:
     links:
       - db:database
     environment:
-        ETHEREUM_JSONRPC_HTTP_URL: https://arbitrum-sepolia.node.blockscout.com/
-        ETHEREUM_JSONRPC_TRACE_URL: https://arbitrum-sepolia.node.blockscout.com/
-        ETHEREUM_JSONRPC_WS_URL: ws://arbitrum-sepolia.node.blockscout.com/
+        ETHEREUM_JSONRPC_HTTP_URL: http://host.docker.internal:8545/
+        ETHEREUM_JSONRPC_TRACE_URL: http://host.docker.internal:8545/
+        ETHEREUM_JSONRPC_WS_URL: ws://host.docker.internal:8545/
         CHAIN_ID: '1337'
 
   visualizer:
