Update frontend configuration

--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -19,3 +19,5 @@ NEXT_PUBLIC_FOOTER_LINKS=https://raw.githubusercontent.com/Uomi-network/uomi-exp
 NEXT_PUBLIC_WEB3_WALLETS=['metamask']
 NEXT_PUBLIC_NETWORK_RPC_URL=https://rpc.uomi.ai
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=322727203e59d903d5b47fc139685acd
+NEXT_PUBLIC_AD_BANNER_PROVIDER=none
+NEXT_PUBLIC_AD_TEXT_PROVIDER=none
