--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -34,10 +34,10 @@ services:
     links:
       - db:database
     environment:
-        ETHEREUM_JSONRPC_HTTP_URL: http://host.docker.internal:8545/
-        ETHEREUM_JSONRPC_TRACE_URL: http://host.docker.internal:8545/
-        ETHEREUM_JSONRPC_WS_URL: ws://host.docker.internal:8545/
-        CHAIN_ID: '1337'
+        ETHEREUM_JSONRPC_HTTP_URL: http://host.docker.internal:8645/
+        ETHEREUM_JSONRPC_TRACE_URL: http://host.docker.internal:8645/
+        ETHEREUM_JSONRPC_WS_URL: ws://host.docker.internal:8645/
+        CHAIN_ID: '4362550583360910'
 
   nft_media_handler:
     depends_on:
