--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,5 +1,7 @@
 ETHEREUM_JSONRPC_VARIANT=geth
-ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8545/
+#ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8545/
+ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8645/
+# ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 
 # DATABASE_EVENT_URL=
@@ -10,7 +12,8 @@ DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 ETHEREUM_JSONRPC_TRANSPORT=http
 ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
-ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
+#ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
+ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8645/
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
 # ETHEREUM_JSONRPC_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_FALLBACK_ETH_CALL_URL=
@@ -175,8 +178,10 @@ INDEXER_DISABLE_TOKEN_INSTANCE_RETRY_FETCHER=false
 INDEXER_DISABLE_TOKEN_INSTANCE_SANITIZE_FETCHER=false
 INDEXER_DISABLE_TOKEN_INSTANCE_LEGACY_SANITIZE_FETCHER=false
 # INDEXER_PENDING_TRANSACTIONS_SANITIZER_INTERVAL=
-INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER=false
-INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
+# INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER=false
+# INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
+INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER=true
+INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=true
 # INDEXER_DISABLE_CATALOGED_TOKEN_UPDATER_FETCHER=
 # INDEXER_DISABLE_BLOCK_REWARD_FETCHER=
 # INDEXER_DISABLE_EMPTY_BLOCKS_SANITIZER=
