fix: add missing build arg to celo workflow

--- a/.github/workflows/publish-docker-image-for-celo.yml
+++ b/.github/workflows/publish-docker-image-for-celo.yml
@@ -12,6 +12,7 @@ jobs:
     env:
       RELEASE_VERSION: 6.8.1
       DOCKER_CHAIN_NAME: celo
+      API_GRAPHQL_MAX_COMPLEXITY: 10400
     steps:
       - uses: actions/checkout@v4
       - name: Setup repo
@@ -60,6 +61,7 @@ jobs:
             linux/amd64
             linux/arm64/v8
           build-args: |
+            API_GRAPHQL_MAX_COMPLEXITY=${{ env.API_GRAPHQL_MAX_COMPLEXITY }}
             CACHE_EXCHANGE_RATES_PERIOD=
             API_V1_READ_METHODS_DISABLED=false
             DISABLE_WEBAPP=false
@@ -84,6 +86,7 @@ jobs:
             linux/amd64
             linux/arm64/v8
           build-args: |
+            API_GRAPHQL_MAX_COMPLEXITY=${{ env.API_GRAPHQL_MAX_COMPLEXITY }}
             CACHE_EXCHANGE_RATES_PERIOD=
             DISABLE_WEBAPP=true
             DISABLE_API=true
@@ -107,6 +110,7 @@ jobs:
             linux/amd64
             linux/arm64/v8
           build-args: |
+            API_GRAPHQL_MAX_COMPLEXITY=${{ env.API_GRAPHQL_MAX_COMPLEXITY }}
             CACHE_EXCHANGE_RATES_PERIOD=
             DISABLE_WEBAPP=true
             DISABLE_INDEXER=true
