--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -296,6 +296,7 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_SCROLL_L1_MESSENGER_START_BLOCK=
 # INDEXER_SCROLL_L2_MESSENGER_CONTRACT=
 # INDEXER_SCROLL_L2_GAS_ORACLE_CONTRACT=
+# INDEXER_SCROLL_ETH_GET_LOGS_RANGE_SIZE=
 # SCROLL_L2_CURIE_UPGRADE_BLOCK=
 # SCROLL_L1_SCALAR_INIT=
 # SCROLL_L1_OVERHEAD_INIT=
