--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -351,6 +351,7 @@ RE_CAPTCHA_CLIENT_KEY=
 RE_CAPTCHA_V3_SECRET_KEY=
 RE_CAPTCHA_V3_CLIENT_KEY=
 RE_CAPTCHA_DISABLED=false
+# RE_CAPTCHA_CHECK_HOSTNAME
 JSON_RPC=
 # API_RATE_LIMIT_HAMMER_REDIS_URL=redis://redis-db:6379/1
 # API_RATE_LIMIT_IS_BLOCKSCOUT_BEHIND_PROXY=false
