--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -351,6 +351,7 @@ RE_CAPTCHA_CLIENT_KEY=
 RE_CAPTCHA_V3_SECRET_KEY=
 RE_CAPTCHA_V3_CLIENT_KEY=
 RE_CAPTCHA_DISABLED=false
+# RE_CAPTCHA_CHECK_HOSTNAME
 JSON_RPC=
 # API_RATE_LIMIT_HAMMER_REDIS_URL=redis://redis-db:6379/1
 # API_RATE_LIMIT_IS_BLOCKSCOUT_BEHIND_PROXY=false
@@ -386,6 +387,7 @@ DECODE_NOT_A_CONTRACT_CALLS=true
 # ACCOUNT_SENDGRID_SENDER=
 # ACCOUNT_SENDGRID_TEMPLATE=
 # ACCOUNT_VERIFICATION_EMAIL_RESEND_INTERVAL=
+# ACCOUNT_OTP_RESEND_INTERVAL=
 # ACCOUNT_PRIVATE_TAGS_LIMIT=2000
 # ACCOUNT_WATCHLIST_ADDRESSES_LIMIT=15
 ACCOUNT_CLOAK_KEY=
