Xname app proxy

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -443,6 +443,8 @@ TENDERLY_CHAIN_PATH=
 # NOVES_FI_API_TOKEN=
 # ZERION_BASE_API_URL=
 # ZERION_API_TOKEN=
+# XNAME_BASE_API_URL=
+# XNAME_API_TOKEN=
 # BRIDGED_TOKENS_ENABLED=
 # BRIDGED_TOKENS_ETH_OMNI_BRIDGE_MEDIATOR=
 # BRIDGED_TOKENS_BSC_OMNI_BRIDGE_MEDIATOR=
